-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 14
-
Component/s: hotspot
-
b27
-
aarch64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8264060 | 11.0.12 | Joshua Zhu | P4 | Resolved | Fixed | b01 |
In register definition of aarch64.ad, each vector register is defined as 4 slots with its calling convention, ideal type, ... and its VMReg value. These VMReg values in reg_def are used by ADLC to generate mapping between OptoReg and VMReg: opto2vm[].
But VMReg is treated as 2 slots inconsistently for vector register. This causes incorrect mapping between VMReg and OptoReg for high 64 bits of vector register.
But VMReg is treated as 2 slots inconsistently for vector register. This causes incorrect mapping between VMReg and OptoReg for high 64 bits of vector register.
- backported by
-
JDK-8264060 AArch64: Incorrect mapping between OptoReg and VMReg for high 64 bits of Vector Register
-
- Resolved
-