8233948: AArch64: Incorrect mapping between OptoReg and VMReg for high 64 bits of Vector Register

Reviewed-by: adinn